# blind-eternities

./: .env  .gitignore  .typos.toml  Cargo.toml  Dockerfile  DockerfileServer  DockerfileSpark  README.md  architecture.drawio  build-for-rpi0.sh  install-spark.sh  makefile  sqlx-data.json
common/: Cargo.toml
common/src/: domain.rs  hostname.rs  lib.rs  mac.rs  machine_status.rs  net.rs  playlist.rs  subsonic.rs  telemetry.rs  web_server.rs  ws.rs
common/src/algorithms/: net_graph.rs
common/src/domain/: hostname.rs  mac.rs  machine_status.rs  mod.rs  music.rs  music_session.rs  playlist.rs
common/src/net/: auth_client.rs  mod.rs  proxy.rs
common/src/telemetry/: metrics.rs  mod.rs
planar-bridge/: Cargo.toml
planar-bridge/assets/: not-found.html  playlist.css  styles.css  walls.css
planar-bridge/assets/styles/: base.css  files.css  index.css  jukebox.css  walls.css
planar-bridge/assets/styles/games/: bg3.css  index.css
planar-bridge/src/: assets.rs  cache.rs  main.rs  metrics.rs  music.rs  util.rs
planar-bridge/src/files/: mod.rs
planar-bridge/src/games/: mod.rs
planar-bridge/src/games/bg3/: melee_honor_run.rs  mod.rs  spell-list.json
planar-bridge/src/games/minecraft/: deaths.rs  logs.rs  mod.rs  (+1 more)
planar-bridge/src/music/: mod.rs  request_coalescing.rs
planar-bridge/src/playlist/: mod.rs
planar-bridge/src/walls/: mod.rs
planar-bridge/templates/: files.html  head.html  index.html  title.html
planar-bridge/templates/files/: index.html
planar-bridge/templates/games/: index.html
planar-bridge/templates/music/: current.html  index.html  now.html  playpause.html  search-results.html  tabs.html  volume-control.html
planar-bridge/templates/playlist/: index.html  playlist.html
planar-bridge/templates/walls/: index.html  wallpaper.html
server/: Cargo.toml  configuration.toml  delete-all-temp-dbs.sh  manage_db.sh  routes.md  sqlx-data.json
server/.sqlx/: query-005095d0563339eb01bc5a69035340a34225658bac6bc6f670d3b6954b861a42.json  query-008cd5367891d8c95efbb13efabd6cded0e2e2cce5991a91f8c5a70688d5b865.json  query-1c18f3a5ad21b8041449b348daa17a2a7d07b3f4ce4da85eced72bf93c6c905d.json  query-1cb2bccc04c69e4b022f1fa425ca1e1b581cbaa23e3fa552b1efbc2eefe08846.json  query-1df9d7d608c21b95f61e6d861ebc0e0dd379c403e2e1c4f8d5168fe3fadb9234.json  query-1fb5fb176363c017c966f2355ac80cbb6b99849cbf4a899c2a909299caf234ff.json  query-2fae7fe01d1cba5b07f161624bdc07256af35383e3fc63aa4cf10dce5195e592.json  query-3017c33d06259e6c3c04718fc21e0062389b2b1dd1adfcdcbdc3f77770521005.json  query-43e26f6a4064afa1b4c3c6234948f73dafa842e69c364ee3212b273fbccaa38c.json  query-4825f63301f603b9a49243300facfd9f6821eb53ccb2bbf9f438fb113b893f23.json  query-48396a74b77fb0c56156913cb82c04facf58731ce8c8dfc9df8640dbbbaef4df.json  query-488c573c1d8c99734121a8fe7ec3557e5f9c85c482a4999b8f96e42887523858.json  query-4b4816d6ef8afc25c7b77223fd883cf39390604878eba12289274128b5e456a0.json  query-5112dd10cffe4cafa443d0e4fd4de325da2f3a5e035723486696f76ed6fe79eb.json  query-7247e390ac342bef95285d9bdb6cfa3288df75457a30c22b0cdacc05e6f4ee00.json  query-86ae1b7b703c5bf8ace33856a7be86307d1c87cddd5c6334b417b0d5b7380ae3.json  query-92c9799292cf6127175e94a61b394cce2a842dfe5d579d34d1a83c3db72abdda.json  query-a23a138ad013559b10e1ac365df68b8fd92bf8c6441b1b03c3c7532828a8abf8.json  query-aec4cbab95ec3a447c551b4ef36aa94112e2d8a7823d87d3f0214aa5e2b94452.json  query-b1a1537ed17db6aa40d6c16c9764316ee65b85df3b5375d49ddc2c2f2f963dad.json  query-c2a296a80f534996d61281040b836cf9304d7c12997a997e2554757f1fa20689.json  query-c612e5edaaed79383e1fa3b55f0d2ff7aa63556593d8f98c6df247053b34439a.json  query-d64c9aafdf4b2f957ea34975ee316d5122dde862ef94f7139e275a3c7c23f1a8.json  query-eb42a110f300255999e42d91a2b1246215a70aefd0a4dbb787b72c3bcafcd4b3.json  query-ec19e77a703f9c42978a6e59bd9a760de1ec6287380bc471230f39c753ddce26.json  query-f83ede9bcf55e29b4c3e90320b5b8816cb708dea02c4bc3be4afe2912164fc0f.json
server/migrations/: 20210915225254_machine_status.down.sql  20210915225254_machine_status.sql  20210915225254_machine_status.up.sql  20210925200916_create_api_token_table.down.sql  20210925200916_create_api_token_table.up.sql  20210927230101_multiple_ips.down.sql  20210927230101_multiple_ips.up.sql  20211014181259_add-ssh-port-to-machine-status.down.sql  20211014181259_add-ssh-port-to-machine-status.sql  20211129222141_create-unique-index-token-hostname.down.sql  20211129222141_create-unique-index-token-hostname.sql  20211211004942_create-bulb-table.sql  20220220002742_add-default-user-to-machine-status.down.sql  20220220002742_add-default-user-to-machine-status.sql  20220226131839_create-music-player-table.sql  20221218104149_drop-music-players.up.sql  20240318215147_add-roles-to-tokens.down.sql  20240318215147_add-roles-to-tokens.up.sql  20240422231841_music-sessions.down.sql  20240422231841_music-sessions.up.sql  20251221170456_add-navidrome-mapping-table.up.sql
server/proptest-regressions/: domain.txt
server/src/: auth.rs  configuration.rs  domain.rs  lib.rs  main.rs  metrics.rs  persistent_connections.rs  routes.rs  schema.rs  startup.rs  telemetry.rs
server/src/auth/: mod.rs  music_session.rs
server/src/persistent_connections/: connections.rs  daemon.rs  mod.rs  ws.rs
server/src/routes/: admin.rs  files.rs  health_check.rs  machine_status.rs  mod.rs  music.rs  music_players.rs  persistent_connections.rs  playlist.rs  remote_spark.rs  walls.rs
server/src/util/: fs.rs
server/tests/api/: auth.rs  bulb.rs  health_check.rs  helpers.rs  machine_status.rs  main.rs  music_players.rs  persistent_connections.rs  remote_spark.rs  ws_persistent_connections.rs
spark/: Cargo.toml
spark-protocol/: Cargo.toml
spark-protocol/src/: client.rs  lib.rs  music.rs  server.rs
spark/src/: backend.rs  config.rs  daemon.rs  main.rs  music.rs  routing.rs  state.rs  tasks.rs  util.rs
spark/src/backend/: mod.rs  songs.rs
spark/src/daemon/: ipc.rs  machine_status.rs  mod.rs  music.rs  persistent_conn.rs  ws_persistent_conn.rs
spark/src/tasks/: machine_status.rs
spark/src/util/: destination.rs  mod.rs
spark/test/: main.rs
(+26 files in other folders)
