[workspace]
resolver = "2"

members = [
    "server",
    "common",
    "spark",
    "spark-protocol",
    "planar-bridge",
]

[workspace.dependencies]
actix-files = "0.6.5"
actix-http = "3.6.0"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
anyhow = "1"
arrayvec = "0.7.4"
async-trait = "0.1"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = { version = "0.14" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.2"
config = "0.14"
dirs = "5.0.1"
either = "1.12.0"
fake = "2.9.2"
futures = "0.3.30"
itertools = "0.13.0"
namespaced-tmp.git = "https://github.com/mendess/namespaced-tmp"
mappable-rc = "0.1.1"
once_cell = "1.19.0"
open = "5.1.3"
petgraph = "0.6.5"
pnet = "0.34"
proptest = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.202"
humantime = "2.1.0"
serde_json = "1.0.117"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", default-features = false }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
public-ip = "0.2.2"
whoami = "1.5.1"
async-recursion = "1.1.1"

[workspace.dependencies.prometheus]
version = "0.13.4"
default-features = false
features = ["process"]

[workspace.dependencies.reqwest]
version = "0.12.4"
features = ["rustls-tls"]
default-features = false

[workspace.dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
]

[workspace.dependencies.mlib]
git = "https://github.com/mendess/m"
default-features = false
rev = "24e37bad2bffcfaa32a3d0bec01d2bcddcc036d6"
# path = "../m/mlib"

[profile.release]
debug = 2
