[workspace]
resolver = "2"
members = [
    "server",
    "common",
    "spark",
    "spark-protocol",
    "planar-bridge",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7.4"
askama = { version = "0.14" }
async-recursion = "1.1.1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-prometheus = "0.9.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.2"
config = "0.14"
dirs = "5.0.1"
either = "1.12.0"
fake = "4.0.0"
futures = "0.3.30"
http = "1.1"
humantime = "2.1.0"
hyper = "1"
itertools = "0.13.0"
mappable-rc = "0.1.1"
namespaced-tmp.git = "https://github.com/mendess/namespaced-tmp"
once_cell = "1.19.0"
open = "5.1.3"
petgraph = "0.6.5"
default-net = "0.22"
parking_lot = "0.12"
proptest = "1.4.0"
prometheus-client = "0.23"
public-ip = "0.2.2"
rand = "0.9"
regex = "1.10.4"
#rust_socketio = "0.6.0"
rust_socketio = { git = "https://github.com/mendess/rust-socketio", rev = "d1597976e432ef780175621fc9af97c556b72ecb" }
serde = "1.0.202"
serde-querystring = "0.2.1"
serde_json = "1.0.117"
socketioxide = "0.14.1"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", default-features = false }
tokio-util = "0.7.11"
tower = "0.4.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
whoami = "1.5.1"

[workspace.dependencies.reqwest]
version = "0.12.4"
features = ["rustls-tls"]
default-features = false

[workspace.dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
]

[workspace.dependencies.mlib]
git = "https://github.com/mendess/m"
default-features = false
rev = "043c4340ea7ef83ecc43b4aea4be0eab05ceca7a"
# path = "../m/mlib"

[profile.release]
debug = 2
