[workspace]
resolver = "2"
members = [
    "server",
    "common",
    "spark",
    "spark-protocol",
    "planar-bridge",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7.6"
askama = { version = "0.14" }
async-recursion = "1.1.1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.10.1" }
axum-prometheus = "0.9.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.58"
config = "0.15"
default-net = "0.22"
dirs = "6"
either = "1.15.0"
fake = "4.4.0"
ffmpeg-next = "8.0.0"
futures = "0.3.31"
http = "1.3"
httpdate = "1.0.3"
humantime = "2.3.0"
hyper = "1"
image = "0.25.8"
itertools = "0.14.0"
lofty = "0.22.4"
mappable-rc = "0.1.1"
mime_guess = "2.0.5"
namespaced-tmp.git = "https://github.com/mendess/namespaced-tmp"
once_cell = "1.21.3"
open = "5.3.2"
parking_lot = "0.12"
petgraph = "0.8"
prometheus-client = "0.24"
proptest = "1.8.0"
public-ip = "0.2.2"
rand = "0.9"
regex = "1.11.3"
#rust_socketio = "0.6.0"
rust_socketio = { git = "https://github.com/mendess/rust-socketio", rev = "d1597976e432ef780175621fc9af97c556b72ecb" }
serde = "1.0.228"
serde-querystring = "0.3"
serde_json = "1.0.145"
socketioxide = "0.17"
tempfile = "3.23.0"
thiserror = "2"
tokio = { version = "1.47.1", default-features = false }
tokio-util = "0.7.16"
tower = "0.5"
tower-http = "0.5"
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
whoami = "1.6.1"

[workspace.dependencies.reqwest]
version = "0.12.23"
features = ["rustls-tls"]
default-features = false

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "postgres",
]

[workspace.dependencies.mlib]
git = "https://github.com/mendess/m"
default-features = false
rev = "0af321c48ab9a1de363000b3ee0b4a1d7657055b"

[profile.release]
debug = 2
