[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
actix-web = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
either.workspace = true
itertools.workspace = true
once_cell.workspace = true
petgraph.workspace = true
prometheus = { workspace = true, optional = true }
rand.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
whoami.workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]

[dependencies.sqlx]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
features = ["json"]

[dev-dependencies]
fake.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
sqlx = ["dep:sqlx"]
metrics = ["dep:prometheus", "dep:actix-web"]
