[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum-prometheus = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
either.workspace = true
itertools.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
prometheus-client = { workspace = true, optional = true }
rand.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
whoami.workspace = true
tower = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http = { workspace = true, optional = true }

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]

[dependencies.sqlx]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
features = ["json"]

[dev-dependencies]
fake.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
sqlx = ["dep:sqlx"]
metrics = [
    "dep:prometheus-client",
    "dep:axum",
    "dep:http",
    "dep:tower",
    "dep:axum-prometheus"
]
