[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum = { workspace = true, optional = true }
axum-prometheus = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
either.workspace = true
http = { workspace = true, optional = true }
httpdate = { workspace = true, optional = true }
itertools.workspace = true
md-5 = { workspace = true }
mime_guess = { workspace = true, optional = true }
once_cell.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
prometheus-client = { workspace = true, optional = true }
rand.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, optional = true, features = ["io", "compat"] }
tower = { workspace = true, optional = true }
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
whoami.workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]

[dependencies.sqlx]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
features = ["json"]

[dev-dependencies]
fake.workspace = true
proptest.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["sqlx", "metrics", "subsonic", "playlist", "web-server-utils"]
sqlx = ["dep:sqlx"]
metrics = [
    "dep:prometheus-client",
    "dep:axum",
    "dep:http",
    "dep:tower",
    "dep:axum-prometheus"
]
web-server-utils = [
    "dep:axum",
    "dep:mime_guess",
    "dep:httpdate",
    "dep:tokio-util",
]
playlist = [
    "dep:http"
]
subsonic = [
    "playlist",

    "dep:http"
]
