[package]
name = "planar-bridge"
version = "0.1.0"
edition.workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
clap.workspace = true
common = { path = "../common", features = ["metrics"] }
config.workspace = true
futures.workspace = true
http.workspace = true
mappable-rc.workspace = true
mlib = { workspace = true, features = ["playlist"] }
prometheus-client.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
spark-protocol = { path = "../spark-protocol" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
axum-extra = { workspace = true, features = ["query"] }
rand.workspace = true
