[package]
name = "planar-bridge"
version = "0.1.0"
edition.workspace = true

[dependencies]
askama.workspace = true
axum-extra = { workspace = true, features = ["query"] }
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
common = { path = "../common", features = ["metrics", "playlist"] }
config.workspace = true
flate2.workspace = true
futures.workspace = true
glob.workspace = true
http.workspace = true
mappable-rc.workspace = true
mlib = { workspace = true, features = ["playlist"] }
prometheus-client.workspace = true
rand.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
spark-protocol = { path = "../spark-protocol" }
thiserror.workspace = true
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
zip.workspace = true
