[package]
edition.workspace = true
name = "blind-eternities"
version = "0.3.0"
default-run = "blind-eternities"

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
axum-prometheus.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
common = { path = "../common", features = ["sqlx", "metrics"] }
config.workspace = true
futures.workspace = true
http.workspace = true
itertools.workspace = true
prometheus.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-querystring.workspace = true
serde_json.workspace = true
socketioxide = { workspace = true, features = ["extensions", "state"] }
spark-protocol = { path = "../spark-protocol" }
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace", "auth"] }
tracing = { workspace = true, features = ["log"] }
tracing-bunyan-formatter.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
uuid.workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["registry", "env-filter"]

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
proptest.workspace = true
fake.workspace = true

[dev-dependencies.reqwest]
workspace = true
features = ["json"]
