[package]
name = "spark-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
common = { path = "../common" }
clap = { workspace = true, optional = true }
mlib = { workspace = true, features = ["queue"] }

[dependencies.namespaced-tmp]
git = "https://github.com/mendess/namespaced-tmp"
features = ["async", "user"]

[dependencies.tokio]
workspace = true
features = ["net", "io-util", "fs", "rt"]

[dev-dependencies]
tempfile.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt", "macros", "time"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
