[package]
name = "spark"
version = "0.5.8"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
common = { path = "../common" }
config.workspace = true
dirs.workspace = true
futures.workspace = true
humantime.workspace = true
itertools.workspace = true
once_cell.workspace = true
open.workspace = true
default-net.workspace = true
public-ip.workspace = true
rust_socketio = { workspace = true, features = ["async"], optional = true }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["log"] }
tracing-bunyan-formatter.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
whoami.workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["registry", "env-filter", "fmt"]

[dependencies.spark-protocol]
path = "../spark-protocol"
features = ["clap"]

[dependencies.namespaced-tmp]
workspace = true
features = ["async", "user"]

[dependencies.tokio]
workspace = true
default-features = false
features = ["macros", "rt-multi-thread", "time", "process", "fs", "net", "signal"]

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.mlib]
workspace = true
features = ["player", "playlist", "queue", "ytdl"]
optional = true


[features]
default = ["ws"]
music-ctl = ["dep:mlib"]
ws = ["dep:rust_socketio"]
