[package]
name = "spark"
version = "0.5.9"
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
common = { path = "../common", features = ["playlist"] }
config.workspace = true
default-net.workspace = true
dirs.workspace = true
ffmpeg-next.workspace = true
futures.workspace = true
humantime.workspace = true
image.workspace = true
itertools.workspace = true
lofty.workspace = true
mime_guess.workspace = true
once_cell.workspace = true
open.workspace = true
public-ip.workspace = true
rust_socketio = { workspace = true, features = ["async"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["log"] }
tracing-bunyan-formatter.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
whoami.workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["registry", "env-filter", "fmt"]

[dependencies.spark-protocol]
path = "../spark-protocol"
features = ["clap"]

[dependencies.namespaced-tmp]
workspace = true
features = ["async", "user"]

[dependencies.tokio]
workspace = true
default-features = false
features = ["macros", "rt-multi-thread", "time", "process", "fs", "net", "signal"]

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.mlib]
workspace = true
features = ["player", "playlist", "queue", "ytdl"]
optional = true


[features]
default = []
music-ctl = ["dep:mlib"]
