[package]
name = "spark"
version = "0.5.16"
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
common = { path = "../common", features = ["playlist"] }
config.workspace = true
default-net.workspace = true
dirs.workspace = true
futures.workspace = true
humantime.workspace = true
itertools.workspace = true
lofty.workspace = true
mime_guess.workspace = true
open.workspace = true
public-ip.workspace = true
rust_socketio = { workspace = true, features = ["async"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing = { workspace = true, features = ["log"] }
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
whoami.workspace = true

[dependencies.spark-protocol]
path = "../spark-protocol"
features = ["clap"]

[dependencies.namespaced-tmp]
workspace = true
features = ["async", "user"]

[dependencies.tokio]
workspace = true
default-features = false
features = ["macros", "rt-multi-thread", "time", "process", "fs", "net", "signal"]

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.mlib]
workspace = true
features = ["player", "playlist", "queue", "ytdl"]
optional = true


[features]
default = ["music-ctl"]
music-ctl = ["dep:mlib"]
